updated changes done by priya.

--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -53,13 +53,13 @@
               class="input-icon input-icon1"
               (click)="changeType(password1, 1)"
             >
-              <i class="fa fa-eye-slash" aria-hidden="true"></i>
+            <i [ngClass]="toggle1 ? 'far fa-eye-slash' : 'far fa-eye'"></i>
             </div>
           </div>
 
-          <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+          <!-- <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
             <div *ngIf="f.password.errors.required">Password is required</div>
-          </div>
+          </div> -->
 
           <div class="container-login100-form-btn p-t-50">
             <div class="wrap-login100-form-btn">
