--- a/src/app/dash-board/booking/calendar-table/calendar-table.component.css
+++ b/src/app/dash-board/booking/calendar-table/calendar-table.component.css
@@ -57,3 +57,8 @@
   width: 900px !important;
   margin: 30px auto;
 }
+/* ::ng-deep.cal-month-view .cal-event {
+  background-color: #1e90ff!important;
+  border-color: #d1e8ff!important;
+  color: #fff!important;
+} */
