--- a/src/app/dash-board/booking/appointment/bookingmanagement/bookingmanagement.component.css
+++ b/src/app/dash-board/booking/appointment/bookingmanagement/bookingmanagement.component.css
@@ -20,3 +20,44 @@
     width: 600px;
     margin: 30px auto;
 }
+
+.btn {
+    background-color: DodgerBlue;
+    border: none;
+    color: white;
+    padding: 12px 16px;
+    font-size: 14px;
+    cursor: pointer;
+    float: right;
+}
+
+/* Darker background on mouse-over */
+.btn:hover {
+    background-color: RoyalBlue;
+}
+.head {
+    padding: 1px 0 0 0;
+    background-color: var(--color_l2);
+    box-sizing: border-box;
+}
+.title {
+    text-align: left;
+    padding-left: 10px;
+    color: #fff;
+    font-weight: 400;
+    font-family: inherit !important;
+    top: 5px;
+}
+.modal-header {
+    padding: 0px;
+    border-bottom: 1px solid #e5e5e5;
+}
+.closed {
+    top: 8px;
+    font-size: 26px;
+    right: 5px;
+    background-color: transparent;
+    border: 0px solid;
+    color: #f3f3f3 !important;
+    font-weight: 900;
+}   
