--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,7 @@
                         <input class="input100" type="username" placeholder="Username" id="Username" name="Username"
                             formControlName="username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
                     </div>
-                    <div *ngIf="submitted && f.username.errors" class="invalid-feedback" style="margin-top:-20px;">
+                    <div *ngIf="submitted && f.username.errors" class="invalid-feedback" style="margin-top:0px;">
                         <div *ngIf="f.username.errors.required">User Name is required</div>
                     </div>
 
@@ -24,13 +24,29 @@
                             [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
 
                         <div class="input-icon input-icon1" (click)="changeType(password1, 1)">
-                            <i class="fa fa-eye-slash" aria-hidden="true"></i>
+                            <i [ngClass]="toggle1 ? 'far fa-eye-slash' : 'far fa-eye'"></i>
                         </div>
                     </div>
 
                     <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                         <div *ngIf="f.password.errors.required">Password is required</div>
                     </div>
+                    <!-- <div class="col-lg-12 col-md-12 col-xs-3 col-sm-3">
+                        <div class="form-group ">
+                            <span class="input-icon"><i class="fa fa-lock"></i></span>
+                            <input class="form-control" name="password" type="password" placeholder="Password"
+                                id="password" #password1 formControlName="password"
+                                [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
+                            <div class="input-icon" (click)="changeType(password1, 1)">
+                                <span class="input-icon">
+                                    <i [ngClass]="toggle1 ? 'far fa-eye-slash' : 'far fa-eye'"></i></span>
+                            </div>
+                        </div>
+                        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                            <div *ngIf="f.password.errors.required">Password is required
+                            </div>
+                        </div>
+                    </div> -->
 
                     <!-- <select class="select wrap-input100 validate-input" formControlName="domain" required
                         [ngClass]="{ 'is-invalid': submitted && f.domain.errors }">
