--- a/src/app/dash-board/masters/employeemaster/employeemaster.component.html
+++ b/src/app/dash-board/masters/employeemaster/employeemaster.component.html
@@ -16,11 +16,16 @@
                 <div class="col-xs-3 form-group">
                     <label path="mobilenumber" for="mobilenumber" cssClass="required">Mobile
                         Number</label>
-                    <input formControlName="mobilenumber" class="form-control" type="number" path="mobilenumber"
-                        name="mobilenumber" [ngClass]="{ 'is-invalid': submitted && f.mobilenumber.errors }"
-                        prefix="+91 " mask="(000) 000 0000" />
+                    <input formControlName="mobilenumber" class="form-control" path="mobilenumber" name="mobilenumber"
+                        maxlength="10" [ngClass]="{ 'is-invalid': submitted && f.mobilenumber.errors }" />
                     <div *ngIf="submitted && f.mobilenumber.errors" class="invalid-feedback">
-                        <div *ngIf="f.mobilenumber.errors.required">Mobile Number is Required</div>
+                        <!-- <div *ngIf="f.mobilenumber.errors.required">Mobile Number is Required</div> -->
+                        <div *ngIf="f.mobilenumber.errors.required">
+                            Mobile Number is Required
+                        </div>
+                        <div *ngIf="f.mobilenumber.errors.minlength">
+                            Mobile Number is Invalid
+                        </div>
                     </div>
                 </div>
                 <div class="col-xs-3 form-group">
@@ -28,7 +33,13 @@
                     <input formControlName="emailid" class="form-control" path="emailid" name="emailid"
                         [ngClass]="{ 'is-invalid': submitted && f.emailid.errors }" />
                     <div *ngIf="submitted && f.emailid.errors" class="invalid-feedback">
-                        <div *ngIf="f.emailid.errors.required">Email Id is Required</div>
+                        <!-- <div *ngIf="f.emailid.errors.required">Email Id is Required</div> -->
+                        <div *ngIf="f.emailid.errors.required">
+                            Email ID is Required
+                        </div>
+                        <div *ngIf="f.emailid.errors.pattern">
+                            Email ID is Invalid
+                        </div>
                     </div>
                 </div>
             </div>
