--- a/src/app/dash-board/setting/profile/registration/registration.component.html
+++ b/src/app/dash-board/setting/profile/registration/registration.component.html
@@ -39,31 +39,6 @@
                 </div>
                 <div class="col-xs-6 col-sm-6 ">
                     <div class="form-group">
-                        <label path="password" for="password" cssClass="required">Password</label>
-                        <input formControlName="password" class="form-control" path="password"
-                            [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-                        <!-- <div class="input-icon input-icon1" (click)="changeType(password1, 1)">
-                            <i class="fa fa-eye-slash" aria-hidden="true"></i>
-                        </div> -->
-                        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                            <div *ngIf="f.password.errors.required">Password is required</div>
-                        </div>
-                    </div>
-                    <!-- <div class="wrap-input100 validate-input" data-validate="Password is required">
-                        <span class="focus-input100"><i class="fa fa-lock"></i></span>
-                        <input class="input100" name="Password" type="Password" placeholder="Password" id="password"
-                            #password1 formControlName="password"
-                            [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-
-                        <div class="input-icon input-icon1" (click)="changeType(password1, 1)">
-                            <i class="fa fa-eye-slash" aria-hidden="true"></i>
-                        </div>
-                    </div> -->
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-6 col-sm-6 ">
-                    <div class="form-group">
                         <label for="roleID">Role Type</label>
                         <input path="role" type="hidden" />
                         <select formControlName="rolename" class="form-control" name="rolenamelist" id="rolenamelist"
@@ -78,6 +53,18 @@
                         </div>
                     </div>
                 </div>
+                <!-- <div class="col-xs-6 col-sm-6 ">
+                    <div class="form-group">
+                        <label path="password" for="password" cssClass="required">Password</label>
+                        <input formControlName="password" class="form-control" path="password"
+                            [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                            <div *ngIf="f.password.errors.required">Password is required</div>
+                        </div>
+                    </div>
+                </div> -->
+            </div>
+            <div class="row">
                 <div class="col-xs-6 col-sm-6 ">
                     <div class="form-group">
                         <label path="status" for="status" cssClass="required">Status</label>
@@ -94,25 +81,37 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-xs-6 col-sm-6">
                     <div class="form-group">
                         <label path="mobileno" for="mobileno" cssClass="required">Mobile Number</label>
-                        <input formControlName="mobileno" type="number" class="form-control" path="mobileno"
+                        <input formControlName="mobileno" maxlength="10" class="form-control" path="mobileno"
                             [ngClass]="{ 'is-invalid': submitted && f.mobileno.errors }" />
                         <div *ngIf="submitted && f.mobileno.errors" class="invalid-feedback">
-                            <div *ngIf="f.mobileno.errors.required">Mobile Number is required</div>
+                            <!-- <div *ngIf="f.mobileno.errors.required">Mobile Number is required</div> -->
+                            <div *ngIf="f.mobileno.errors.required">
+                                Mobile Number is Required
+                            </div>
+                            <div *ngIf="f.mobileno.errors.minlength">
+                                Mobile Number is Invalid
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-xs-6 col-sm-6">
                     <div class="form-group">
                         <label path="email" for="email" cssClass="required">Email</label>
                         <input formControlName="email" class="form-control" path="email"
                             [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
                         <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-                            <div *ngIf="f.email.errors.required">Email is required</div>
+                            <!-- <div *ngIf="f.email.errors.required">Email is required</div> -->
+                            <div *ngIf="f.email.errors.required">
+                                Email is Required
+                            </div>
+                            <div *ngIf="f.email.errors.pattern">
+                                Email is Invalid
+                            </div>
                         </div>
                     </div>
                 </div>
